--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/jasmine-html.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jasmine/3.3.0/boot.js"></script>
-  <script src="construct-note.js"></script>
+  <!-- <script src="construct-note.js"></script>
   <script src="construct-note.test.js"></script>
   <script src="average-pair.js"></script>
   <script src="average-pair.test.js"></script>
   <script src="longest-fall.js"></script>
-  <script src="longest-fall.test.js"></script>
+  <script src="longest-fall.test.js"></script> -->
   <script src="two-array-object.js"></script>
   <script src="two-array-object.test.js"></script>
-  <script src="separate-positive.js"></script>
+  <!-- <script src="separate-positive.js"></script>
   <script src="separate-positive.test.js"></script>
   <script src="is-subsequence.js"></script>
   <script src="is-subsequence.test.js"></script>
@@ -26,6 +26,6 @@
   <script src="count-pairs.js"></script>
   <script src="count-pairs.test.js"></script>
   <script src="pivot-index.js"></script>
-  <script src="pivot-index.test.js"></script>
+  <script src="pivot-index.test.js"></script> -->
 </body>
 </html>
