--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
   <script src="longest-fall.js"></script>
   <script src="longest-fall.test.js"></script> 
   <script src="two-array-object.js"></script>
-  <script src="two-array-object.test.js"></script> -->
+  <script src="two-array-object.test.js"></script>
   <script src="separate-positive.js"></script>
   <script src="separate-positive.test.js"></script>
-  <!-- <script src="is-subsequence.js"></script>
+  <script src="is-subsequence.js"></script>
   <script src="is-subsequence.test.js"></script>
   <script src="same-frequency.js"></script>
-  <script src="same-frequency.test.js"></script>
+  <script src="same-frequency.test.js"></script> -->
   <script src="count-pairs.js"></script>
   <script src="count-pairs.test.js"></script>
-  <script src="pivot-index.js"></script>
+  <!-- <script src="pivot-index.js"></script>
   <script src="pivot-index.test.js"></script>  -->
 </body>
 </html>
